styles/styles.css
:root {
  --white: #E6E6E6;
  --lilac: #dcbbed;
  --brown: #855369;
  --magenta: #bd3c83;
  --beige: #e2d0bc;
  --black: #4a2b32;
}

@font-face {
  font-family: Mondwest;
  src: url(../fonts/ppmondwest-regular.otf);
}
@font-face {
  font-family: Neue-Bit;
  src: url(../fonts/ppneuebit-bold.otf);
}
@font-face {
  font-family: Pixel-Sans;
  src: url(../fonts/fs-pixel-sans-unicode-regular.ttf);
}
@font-face {
  font-family: Host-Grotesk;
  src: url(../fonts/HostGrotesk-VariableFont_wght.ttf);
}
@font-face {
  font-family: Host-Grotesk-Italic;
  src: url(../fonts/HostGrotesk-Italic-VariableFont_wght.ttf);
}

html{
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body { /*default styles*/
    background-color: var(--white);
    border: 0;
    font-family: Host-Grotesk;
    font-size: 16px;
    margin: 0;
    overflow-x: hidden;
    padding: 0;
}

.wrapper{
  overflow-x: hidden;
}

.main-container{
  margin: 100px auto;
  width: 70vw;
}

h2{
  color: var(--brown);
  font-family: Mondwest;
  font-size: 4em;
  font-weight: 800;
  letter-spacing: -.05em;
  line-height: 0.8;
  margin: 0 0 .2em 0;
}
h3{
  color: var(--black);
  font-family: Host-Grotesk;
  font-size: 1.5em;
  font-weight: 800;
  line-height: 1;
  margin: 0;
}
h4{
  color: #503468;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  margin: 0; 
  background-color: var(--lilac);
  border-radius: 15px;
  padding: 0 5px;
}
p{
  color: var(--black);
  font-size: 1.25em;
  line-height: 1.25;
  margin: 0;
}
a {
  text-decoration: none;
}
i {
  position: relative;
  z-index: -1;
}




/* ---------------------------------------------------------------------NAV-------------------------------------------------------------------*/
nav{
  position: fixed;
  width: 100%;
  z-index: 1;
}
.nav-container {
  background-color: none;
  border-radius: 25px;
  display: flex;
  justify-content: space-between;
  padding: 0 2.5vw;
  margin: 10px 13vw;
  transition: background-color 0.3s ease-in-out; 
}
nav a {
  display: inline-block;
  font-family: Pixel-Sans;
  font-size: 2em;
  transition: 0.1s ease-in-out;
  padding-top: 6px;
  padding-bottom: 10px;
}
nav a:hover {
  transform: translateY(-5px);
  color: var(--lilac);
}
.nav-left a{
  color: var(--magenta);
}
.nav-right a{
  color: var(--white);
  margin-left: 50px;
}

.nav-container.scrolled{
  background-color: rgba(230, 230, 230, 0.7);
  backdrop-filter: blur(10px);
  box-shadow: 5px 5px 10px 5px rgba(146, 80, 101, 0.1);
}
.nav-container.scrolled a:hover{
  color: var(--black);
}
.nav-right.scrolled2 a{
  color: var(--black);
}
.nav-right.scrolled2 a:hover{
  color: var(--magenta);
}



/* ---------------------------------------------------------------------HEADER-------------------------------------------------------------------*/

h1 {
  color: var(--lilac);
  font-family: Mondwest;
  font-size: 6em;
  font-weight: 100;
  letter-spacing: 0px;
  line-height: 0.5;
  margin: 0;
  text-shadow: 5px 5px 15px var(--black);
}




/* ---------------------------------------------------------------------CARDS-------------------------------------------------------------------*/

.row-grid{
  display: grid;
  gap: 15px;
  margin: 15px auto;
  grid-template-columns: 1fr 1fr;
}

.card {
  border-radius: 25px;
  box-shadow: 5px 5px 20px 5px rgba(64, 15, 79, 0.08);
  flex: 1 1;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  margin: 50px auto;
  transition: 0.2s ease-in-out;
  background: linear-gradient(var(--lilac) -100%, rgba(215, 86, 159, 0) 70%);
}
.card:hover {
  box-shadow: 5px 5px 25px 10px rgba(64, 15, 79, 0.15);
  transform: translateY(-10px);
  background-color: rgb(230, 223, 216);
}
.card-img{
  border-radius: 0px 25px 25px 0px;
  display: block;
  object-fit: cover;
  width: 100%;
}
.card-padding{
  padding: 50px;
}





/* ----------------------------------------------------------------MOBILE RESPONSIVENESS---------------------------------------------------------------*/

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 768px) {
  body {
    font-size: 12px;
    overflow-x: hidden;
  }
  .main-container{
    margin: 0 6vw;
    margin-top: 100px;
    width: 85vw;
  }
  .nav-container {
    padding: 10px 5vw;
    margin: 2vw;
    border-radius: 30px;
  }
  nav a {
    font-family: Pixel-Sans;
    font-size: 3em;
    text-decoration: none;
  }
  #grad1 {
    height: 450px;
  }
  #grad2 {
    height: 580px;
  }
  .row-grid {
    grid-template-columns: 1fr;
  }
  .card {
    grid-template-columns: 1fr;
  }
  .card-img{
  border-radius: 0px 0px 25px 25px;
  }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  body {
    font-size: 13px; 
  }
  #grad1 {
    height: 450px;
  }
  #grad2 {
    height: 600px;
  }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  /* current default */
  body {
    font-size: 14px; 
  }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  body {
    font-size: 16px; 
  }
  #grad1 {
    height: 500px;
  }
  #grad2 {
    height: 650px;
  }
}





/* ----------------------------------------------------------------DECORATIONS---------------------------------------------------------------*/

.highlight-white{
  color: var(--white);
}
.highlight-magenta{
  color: var(--magenta);
}


.gradients{
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
}
#grad1 {
  background: radial-gradient(farthest-side at center, var(--black) 20%, rgba(255, 255, 255, 0) 100%);
  margin-left: -40vw;
  margin-top: -200px;
  overflow-x: hidden;
  position: absolute;
  width: 200vw;
  z-index: -1;
}
#grad2 {
  background: radial-gradient(farthest-side at center, var(--black) 20%, rgba(255, 255, 255, 0) 100%);
  margin-left: -30vw;
  margin-top: -300px;
  overflow-x: hidden;
  position: absolute;
  width: 140vw;
  z-index: -1;
}
#pinkGrad1 {
  background: radial-gradient(farthest-side at center, var(--magenta) 20%, var(--lilac) 60%, rgba(255, 8, 8, 0) 100%);
  margin-left: 40vw;
  margin-top: 100px;
  opacity: 40%;
  overflow-x: hidden;
  position: absolute;
  height: 800px;
  width: 120vw;
  z-index: -1;
}

#casesGrad {
  background: radial-gradient(farthest-side at center, var(--brown) 20%, rgba(255, 8, 8, 0) 100%);
  margin-left: 0vw;
  margin-top: -400px;
  overflow-x: hidden;
  position: absolute;
  height: 800px;
  width: 150vw;
  z-index: -1;
}

